--- a/Bodega/MainWindow.xaml
+++ b/Bodega/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Button x:Name="btnHola" Content="Hola" HorizontalAlignment="Left" Margin="286,170,0,0" VerticalAlignment="Top" Click="button_Click"/>
 
     </Grid>
 </Window>
