--- a/Bodega/MainWindow.xaml
+++ b/Bodega/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Button Content="Antonio" HorizontalAlignment="Left" Margin="146,108,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
