--- a/Bodega/MainWindow.xaml
+++ b/Bodega/MainWindow.xaml
@@ -6,13 +6,5 @@
         xmlns:local="clr-namespace:Bodega"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Button Content="Antonio" HorizontalAlignment="Left" Margin="146,108,0,0" VerticalAlignment="Top"/>
-        <Button Content="Otro boton" HorizontalAlignment="Left" Margin="442,108,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnHola" Content="Hola" HorizontalAlignment="Left" Margin="286,170,0,0" VerticalAlignment="Top" Click="button_Click"/>
-        <Button Content="silvia" HorizontalAlignment="Left" Margin="355,294,0,0" VerticalAlignment="Top"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="611,190,0,0" VerticalAlignment="Top"/>
-
-
-    </Grid>
+    <Grid/>
 </Window>
