--- a/Bodega/MainWindow.xaml
+++ b/Bodega/MainWindow.xaml
@@ -6,8 +6,5 @@
         xmlns:local="clr-namespace:Bodega"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
-    <Grid>
-        <DatePicker x:Name="dtpFecha" Margin="32,25,625,355"/>
-        <Label x:Name="lblHora" Content="" Margin="205,25,491,355"/>
-    </Grid>
+    <Grid/>
 </Window>
