--- a/Bodega/MainWindow.xaml
+++ b/Bodega/MainWindow.xaml
@@ -7,8 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="482" Width="718">
     <Grid>
-        <DatePicker x:Name="dtpFecha" Margin="32,25,535,355"/>
-        <Label x:Name="lblHora" Content="" Margin="205,25,491,355"/>
         <ComboBox x:Name="cmbObjetivo" HorizontalAlignment="Left" Margin="153,236,0,0" VerticalAlignment="Top" Width="120"/>
         <ComboBox x:Name="cmbOperacion" HorizontalAlignment="Left" Margin="153,280,0,0" VerticalAlignment="Top" Width="120"/>
         <Label Content="Objetivo: " HorizontalAlignment="Left" Height="30" Margin="48,233,0,0" VerticalAlignment="Top" Width="114"/>
@@ -17,5 +15,7 @@
         <Label Content="Equipo: " HorizontalAlignment="Left" Height="32" Margin="48,312,0,0" VerticalAlignment="Top" Width="114"/>
         <Button Content="Enviar" x:Name="btnEnviar" HorizontalAlignment="Left" Height="30" Margin="81,397,0,0" VerticalAlignment="Top" Width="95"/>
         <Button Content="Limpiar" x:Name="btnLimpiar" HorizontalAlignment="Left" Height="30" Margin="239,397,0,0" VerticalAlignment="Top" Width="95" Click="btnLimpiar_Click"/>
+        <Label x:Name="lblHora" Content="Fecha Actual:" Margin="48,41,567,376"/>
+        <TextBlock x:Name="txtFecha" HorizontalAlignment="Left" Margin="141,46,0,0" Text="TextBlock" TextWrapping="Wrap" VerticalAlignment="Top" Height="21" Width="157"/>
     </Grid>
 </Window>
