--- a/Bodega/MainWindow.xaml
+++ b/Bodega/MainWindow.xaml
@@ -19,7 +19,7 @@
         <Label Content="Operación: " HorizontalAlignment="Left" Height="32" Margin="45,222,0,0" VerticalAlignment="Top" Width="114"/>
         <ComboBox x:Name="cmbEquipo" HorizontalAlignment="Left" Margin="150,264,0,0" VerticalAlignment="Top" Width="120"/>
         <Label Content="Equipo: " HorizontalAlignment="Left" Height="32" Margin="45,259,0,0" VerticalAlignment="Top" Width="114"/>
-        <Button Content="Enviar" x:Name="btnEnviar" HorizontalAlignment="Left" Height="30" Margin="78,344,0,0" VerticalAlignment="Top" Width="95"/>
+        <Button Content="Enviar" x:Name="btnEnviar" HorizontalAlignment="Left" Height="30" Margin="78,344,0,0" VerticalAlignment="Top" Width="95" Click="btnEnviar_Click"/>
         <Button Content="Limpiar" x:Name="btnLimpiar" HorizontalAlignment="Left" Height="30" Margin="236,344,0,0" VerticalAlignment="Top" Width="95" Click="btnLimpiar_Click"/>
         <Label Content="Fecha actual:" HorizontalAlignment="Left" Height="30" Margin="44,28,0,0" VerticalAlignment="Top" Width="82"/>
 
