--- a/Bodega/MainWindow.xaml
+++ b/Bodega/MainWindow.xaml
@@ -10,18 +10,20 @@
 
         <TextBlock x:Name="txtFecha" HorizontalAlignment="Left" Margin="150,33,0,0" Text="TextBlock" TextWrapping="Wrap" VerticalAlignment="Top" Height="21" Width="158"/>
         <ComboBox x:Name="cmbGrupo" HorizontalAlignment="Left" Margin="150,92,0,0" VerticalAlignment="Top" Width="210" SelectionChanged="cmbGrupo_SelectionChanged" />
-        <ComboBox x:Name="cmbLocalizacion" HorizontalAlignment="Left" Margin="150,136,0,0" VerticalAlignment="Top" Width="210"/>
+        <ComboBox x:Name="cmbLocalizacion" HorizontalAlignment="Left" Margin="150,136,0,0" VerticalAlignment="Top" Width="210" SelectionChanged="cmbLocalizacion_SelectionChanged"/>
         <Label Content="Grupo: " HorizontalAlignment="Left" Height="30" Margin="44,88,0,0" VerticalAlignment="Top" Width="114"/>
         <Label Content="Localización: " HorizontalAlignment="Left" Height="32" Margin="44,131,0,0" VerticalAlignment="Top" Width="114"/>
         <ComboBox x:Name="cmbObjetivo" HorizontalAlignment="Left" Margin="150,183,0,0" VerticalAlignment="Top" Width="210"/>
         <ComboBox x:Name="cmbOperacion" HorizontalAlignment="Left" Margin="150,227,0,0" VerticalAlignment="Top" Width="210"/>
         <Label Content="Objetivo: " HorizontalAlignment="Left" Height="30" Margin="45,180,0,0" VerticalAlignment="Top" Width="114"/>
         <Label Content="Operación: " HorizontalAlignment="Left" Height="32" Margin="45,222,0,0" VerticalAlignment="Top" Width="114"/>
-        <ComboBox x:Name="cmbEquipo" HorizontalAlignment="Left" Margin="150,264,0,0" VerticalAlignment="Top" Width="210"/>
+        <ComboBox x:Name="cmbEquipo" HorizontalAlignment="Left" Margin="150,264,0,0" VerticalAlignment="Top" Width="210" SelectionChanged="cmbEquipo_SelectionChanged"/>
         <Label Content="Equipo: " HorizontalAlignment="Left" Height="32" Margin="45,259,0,0" VerticalAlignment="Top" Width="114"/>
         <Button Content="Enviar" x:Name="btnEnviar" HorizontalAlignment="Left" Height="30" Margin="45,344,0,0" VerticalAlignment="Top" Width="95" Click="btnEnviar_Click"/>
         <Button Content="Limpiar" x:Name="btnLimpiar" HorizontalAlignment="Left" Height="30" Margin="236,344,0,0" VerticalAlignment="Top" Width="95" Click="btnLimpiar_Click"/>
         <Label Content="Fecha actual:" HorizontalAlignment="Left" Height="30" Margin="44,28,0,0" VerticalAlignment="Top" Width="82"/>
+        <Image x:Name="localizacionimg" HorizontalAlignment="Left" Height="97" Margin="440,92,0,0" VerticalAlignment="Top" Width="160"/>
+        <Image x:Name="equipoimg" HorizontalAlignment="Left" Height="97" Margin="440,208,0,0" VerticalAlignment="Top" Width="160"/>
 
 
 
